# chatties

./: .eslintrc.cjs  .gitignore  package.json  plugins.md  pnpm-lock.yaml  readme.md  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs  type_to_ts.rs
src-tauri/src/: credentials.rs  irc_types.rs  main.rs  message_history.rs  utils.rs
src/lib/: EmoteTooltip.svelte  RichText.svelte  api.ts  autocomplete.civet  autocomplete.ts  plugins.civet  plugins.ts  utils.civet  utils.ts
src/lib/api/: credentials.civet  credentials.ts  decorations.civet  error.civet  error.ts  index.civet  index.ts  smart-invoke.d.ts  smart-invoke.js
src/lib/chat/: Badge.svelte  Emote.svelte  JoinMessage.svelte  Message.svelte  PartMessage.svelte  PrivMessage.svelte  SystemMessage.svelte  Time.svelte  Username.svelte
src/lib/plugins/: 7tv.civet  7tv.ts  betterttv.civet  betterttv.ts  ffz.civet  ffz.ts  plugin-api.civet  plugin-api.d.ts  plugin-api.ts  regex-based.ts  shared.civet  shared.ts  twitch-native.civet  twitch-native.ts
src/lib/types/: message.civet  message.ts  priv-msg.ts  text.civet
src/routes/: +layout.svelte  +page.svelte  Channels.svelte  JoinChannel.svelte  Login.svelte  Messages.svelte  SendMessage.svelte
src/routes/settings/: +layout.svelte
src/routes/settings/plugins/: +page.svelte
src/routes/settings/plugins/[pluginid]/: +page.svelte  Boolean.svelte  FlatSetting.svelte  Number.svelte  Setting.svelte  String.svelte  StringEnum.svelte
types/: autocomplete.d.ts  message.d.ts  plugin-api.d.ts  settings.d.ts  text.d.ts  twitch.d.ts
