[package]
name = "chatties"
version = "0.1.0"
description = "twitch chat client :3"
authors = ["esthedebeste"]
license = "MIT"
repository = "https://github.com/tbhmens/chatties"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "dialog-ask", "dialog-confirm", "dialog-message", "http-request", "protocol-asset", "shell-open"] }
twitch-irc = { version = "5.0.0", features = ["with-serde", "transport-tcp"] }
tokio = "1.24.2"
open = "3.2.0"
anyhow = "1.0.68"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
