[package]
name = "chatties"
version = "0.2.0"
description = "twitch chat client :3"
authors = ["esthedebeste"]
license = "MIT"
repository = "https://github.com/tbhmens/chatties"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
macros = { path = "macros" }
tauri = { version = "1.2", features = ["devtools", "dialog-ask", "dialog-confirm", "dialog-message", "http-request", "protocol-asset", "shell-open"] }
twitch-irc = { version = "5.0.0", features = ["with-serde", "transport-tcp"] }
tokio = "1.24.2"
open = "3.2.0"
anyhow = "1.0.68"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
async-trait = "0.1.64"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
